--- a/src/App.css
+++ b/src/App.css
@@ -35,4 +35,13 @@
 }
 .text-area{
   font-size:20px;
+  padding: 15px;
+  font-family: poppins;
+}
+.action-btn{
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
+  margin-top: 20px;
+  cursor: pointer;
 }
